--- a/third.html
+++ b/third.html
@@ -27,12 +27,11 @@
   }
   
  section {
-  float: right;
+  float: left;
   width: 80%;
   background-color: white;
-  border: solid;
   padding: 20px;
-  margin: 5px;
+  border: solid;
   }
   
  footer {
