--- a/third.html
+++ b/third.html
@@ -77,12 +77,13 @@
  </section>
 
 
-
+<article>
  <h3>Juomavalikoimat koodauksen tukena</h3> 
 <ul style="list-style-type:square;" class="listat">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
 </ul>
+ </article>
 
  
  
