--- a/third.html
+++ b/third.html
@@ -4,7 +4,9 @@
  <title> Annan kotisivu 3 </title>
  <link rel="stylesheet" href="styles.css">
  <style>
- 
+ * {
+  box-sizing: border-box;
+}
  
  header {
   padding: 30px;
