--- a/third.html
+++ b/third.html
@@ -17,10 +17,11 @@
   
  nav {
   float: left;
-  width: 20%;
+  width: 18%;
   background-color: snow;
   padding: 20px;
   border: solid;
+  margin: 1px;
   }
   
  nav ul {
@@ -30,10 +31,11 @@
   
  section {
   float: left;
-  width: 80%;
+  width: 79%;
   background-color: white;
   padding: 20px;
   border: solid;
+  margin:1px;
   }
   
  footer {
