--- a/third.html
+++ b/third.html
@@ -51,6 +51,17 @@
   margin:5px;
 }
   
+h3 {
+ text-align: center;
+ font-size: 15px;
+ font-family: verdana;
+ border-style: dashed;
+ border-radius: 10px;
+ padding: 1px;
+ margin: 5px;
+ 
+  }
+  
   </style>
  
 </head>
