--- a/third.html
+++ b/third.html
@@ -90,13 +90,13 @@ h3 {
  </section>
 
 
-<article>
+
  <h3>Juomavalikoimat koodauksen tukena</h3> 
-<ul style="list-style-type:square;" class="listat">
+<ul style="list-style-type:square;">
   <li>Megaforce Sugarfree
   <li>Euroshopper Energy Drink
 </ul>
- </article>
+ 
 
  
  
