--- a/bootstrap.html
+++ b/bootstrap.html
@@ -19,7 +19,7 @@
     <div class="row”>
       <div class="col-sm-4">My first column</div>
       <div class="col-sm-4">My second column</div>
-      <div class="col-sm-4">My third column>/div>
+      <div class="col-sm-4">My third column</div>
    </div>
  </div>
 
