--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,11 +11,14 @@
     <title>Hello, world!</title>
   </head>
   
-  <body>
-    <div class="container">
+<body>
+<div class="container">
     <h1>Hello, world!</h1>
     <div class="row”>
       <div class="col-sm-4">My first column</div>
+          <h3>Column 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       <div class="col-sm-4">My second column</div>
       <div class="col-sm-4">My third column</div>
    </div>
