--- a/bootstrap.html
+++ b/bootstrap.html
@@ -20,6 +20,9 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       <div class="col-sm-4">My second column</div>
+          <h3>Column 2</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+          <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
       <div class="col-sm-4">My third column</div>
    </div>
  </div>
