--- a/bootstrap.html
+++ b/bootstrap.html
@@ -15,15 +15,13 @@
 <div class="container">
     <h1>Hello, world!</h1>
     <div class="row”>
-      <div class="col-sm-4">My first column</div>
-          <h3>Column 1</h3>
+      <div class="col-sm-4">Eka</div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      <div class="col-sm-4">My second column</div>
-          <h3>Column 2</h3>
+      <div class="col-sm-4">Toka</div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
           <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      <div class="col-sm-4">My third column</div>
+      <div class="col-sm-4">Kolmas</div>
    </div>
  </div>
 
