--- a/bootstrap.html
+++ b/bootstrap.html
@@ -14,9 +14,9 @@
 <body>
 <h1>Hello, world!</h1>
 <div class="container">
-  <div class="row”>
+  <div class="row">
     <div class="col-sm-4">Eka</div>
-    <div class="col-sm-4">Toka</div>
+    <div class="col-sm-4">Toinen</div>   
     <div class="col-sm-4">Kolmas</div>
    </div>
  </div>
