--- a/bootstrap.html
+++ b/bootstrap.html
@@ -20,7 +20,12 @@
     <div class="col-sm-4">Kolmas</div>
    </div>
  </div>
-
+ <div class="container">
+  <div class="row">
+    <div class="col-lg-6">Eka</div>
+    <div class="col-lg-6">Toinen</div>   
+   </div>
+ </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
