--- a/bootstrap.html
+++ b/bootstrap.html
@@ -15,16 +15,31 @@
 <h1>Hello, world!</h1>
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">Eka</div>
-    <div class="col-sm-4">Toinen</div>   
-    <div class="col-sm-4">Kolmas</div>
+    <div class="col-sm-4">First</div>
+    <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-4">Second</div>  
+    <h3>Column 2</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-sm-4">Third</div>
+    <h3>Column 3</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
    </div>
  </div>
   
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">Eka</div>
-    <div class="col-lg-6">Toinen</div>   
+    <div class="col-lg-6">Fourth</div>
+    <h3>Column 4</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="col-lg-6">Fifth</div>  
+    <h3>Column 5</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
    </div>
 </div>
     <!-- Optional JavaScript -->
