--- a/bootstrap.html
+++ b/bootstrap.html
@@ -15,7 +15,7 @@
 <h1>Hello, world!</h1>
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">First</div>
+    <div class="col-sm-4"></div>
     <h3>Column 1</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
