--- a/bootstrap.html
+++ b/bootstrap.html
@@ -15,16 +15,18 @@
 <h1>Hello, world!</h1>
 <div class="container">
   <div class="row">
-    <div class="col-sm-4"></div>
-    <h3>Column 1</h3>
+    <div class="col-sm-4">
+      <h3>Column 1</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    <div class="col-sm-4">Second</div>  
-    <h3>Column 2</h3>
+    </div>
+    <div class="col-sm-4"> 
+      <h3>Column 2</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    <div class="col-sm-4">Third</div>
-    <h3>Column 3</h3>
+    </div>
+    <div class="col-sm-4">
+      <h3>Column 3</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
    </div>
@@ -32,12 +34,13 @@
   
 <div class="container">
   <div class="row">
-    <div class="col-lg-6">Fourth</div>
-    <h3>Column 4</h3>
+    <div class="col-lg-6">
+      <h3>Column 4</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    <div class="col-lg-6">Fifth</div>  
-    <h3>Column 5</h3>
+    </div>
+    <div class="col-lg-6">  
+      <h3>Column 5</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
    </div>
