--- a/bootstrap.html
+++ b/bootstrap.html
@@ -7,13 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="kotisivu.css">
     
-    <title>Hello, world!</title>
+    <title>Hyvinvoiva sinä</title>
   </head>
   
 <body>
-<h1>Hello, world!</h1>
+<h1>Hyvinvoiva sinä</h1>
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
