--- a/bootstrap.html
+++ b/bootstrap.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="kotisivu.css">
     
-    <title>Hyvinvoiva sinä</title>
+    <title>Hello, world!</title>
   </head>
   
 <body>
-<h1>Hyvinvoiva sinä</h1>
+<h1>Hello, world!</h1>
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
