--- a/hsindex.html
+++ b/hsindex.html
@@ -14,6 +14,20 @@
   
 <body>
 <h1>Hyvinvoiva sinä</h1>
+ 
+  <ul class="nav">
+			<li class="nav-item">
+				<a class="nav-link active" href="hsindex.html">Link 1</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="TÄHÄNLINKKI">Link 2</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="TÄHÄNLINKKI">Link 3</a>
+			</li>
+		</ul> 
+  
+  
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
