--- a/hsindex.html
+++ b/hsindex.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="hs.css">
     
     <title>Hyvinvoiva sinä</title>
+	  
+.nav {
+	text-align:center;
+	  }
+	  
+	  
   </head>
   
 <body>
