--- a/hsindex.html
+++ b/hsindex.html
@@ -11,11 +11,7 @@
     
     <title>Hyvinvoiva sinä</title>
 	  
-<style>	  
-.nav {
-	text-align:center;
-	  }
-</style>
+
 	  
 	  
   </head>
@@ -26,6 +22,7 @@
 <h1>Hyvinvoiva sinä</h1>
 </div>
  
+<div id="nav">	
   <ul class="nav">
 			<li class="nav-item">
 				<a class="nav-link active" href="hsindex.html">Link 1</a>
@@ -36,8 +33,8 @@
 			<li class="nav-item">
 				<a class="nav-link" href="TÄHÄNLINKKI">Link 3</a>
 			</li>
-		</ul> 
-  
+   </ul> 
+</div>
   
 <div class="container">
   <div class="row">
