--- a/hsindex.html
+++ b/hsindex.html
@@ -36,6 +36,18 @@
    </ul> 
 </div>
   
+	
+div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h3>Column 1</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+ </div<>
+</div>
+	  
+	  
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
