--- a/hsindex.html
+++ b/hsindex.html
@@ -37,7 +37,7 @@
 </div>
   
 	
-div class="container">
+<div class="container">
   <div class="row">
     <div class="col-lg-12">
       <h3>Column 1</h3>
