--- a/hsindex.html
+++ b/hsindex.html
@@ -35,7 +35,11 @@
 			</li>
    </ul> 
 </div>
-  
+ 
+<figure>
+      <img src="https://cdn.pixabay.com/photo/2018/08/19/01/33/poodle-3615894_1280.jpg" alt="Villakoira ruohikossa makaamassa" width="700">
+      <figcaption>Villakoirat tykkäävät leikkiä palloilla</figcaption>
+    </figure>	
 	
 <div class="container">
   <div class="row">
@@ -48,25 +52,7 @@
 </div>
 	  
 	  
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4"> 
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Column 3</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-    </div>
-   </div>
- </div>
+
 
 <footer>
 	<p>Footer here</p>
