--- a/hsindex.html
+++ b/hsindex.html
@@ -37,7 +37,7 @@
 </div>
  
 <figure>
-      <img src="https://cdn.pixabay.com/photo/2018/08/19/01/33/poodle-3615894_1280.jpg" alt="Villakoira ruohikossa makaamassa" width="700">
+      <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="700">
       <figcaption>Villakoirat tykkäävät leikkiä palloilla</figcaption>
     </figure>	
 	
