--- a/hsindex.html
+++ b/hsindex.html
@@ -11,8 +11,14 @@
     
     <title>Hyvinvoiva sinä</title>
 	  
-
-	  
+<style>
+	figure {
+        border: none;
+        padding: 4px;
+        margin: 4px;
+        text-align:center;
+      }
+</style>  
 	  
   </head>
   
