--- a/hsindex.html
+++ b/hsindex.html
@@ -34,7 +34,7 @@
 				<a class="nav-link active" href="hsindex.html">Link 1</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="TÄHÄNLINKKI">Link 2</a>
+				<a class="nav-link" href="hs2.html">Link 2</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="TÄHÄNLINKKI">Link 3</a>
