--- a/hs2.html
+++ b/hs2.html
@@ -37,7 +37,7 @@
 				<a class="nav-link" href="hs2.html">Link 2</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="h3.html">Link 3</a>
+				<a class="nav-link" href="hs3.html">Link 3</a>
 			</li>
    </ul> 
 </div>
