--- a/hsindex.html
+++ b/hsindex.html
@@ -30,15 +30,15 @@
  
 <div id="nav">	
   <ul class="nav">
-			<li class="nav-item">
-				<a class="nav-link active" href="hsindex.html">Link 1</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="hs2.html">Link 2</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="hs3.html">Link 3</a>
-			</li>
+	<li>
+	<a class="nav-link active" href="hsindex.html">ETUSIVU</a>
+	</li>
+	<li>
+	<a class="nav-link" href="hs2.html">BRAIN RELIEF</a>
+	</li>
+	<li>
+	<a class="nav-link" href="hs3.html">OTA YHTEYTTÄ</a>
+	</li>
    </ul> 
 </div>
  
