--- a/hsindex.html
+++ b/hsindex.html
@@ -12,12 +12,17 @@
     <title>Hyvinvoiva sinä</title>
 	  
 <style>
-	figure {
+figure {
         border: none;
         padding: 4px;
         margin: 4px;
         text-align:center;
       }
+
+ul {
+	text-align:center;
+	}
+	
 </style>  
 	  
   </head>
