--- a/hs3.html
+++ b/hs3.html
@@ -34,7 +34,7 @@
 	<a class="nav-link active" href="hsindex.html">ETUSIVU</a>
 	</li>
 	<li>
-	<a class="nav-link" href="hs3.html">BRAIN RELIF</a>
+	<a class="nav-link" href="hs3.html">BRAIN RELIEF</a>
 	</li>
 	<li>
 	<a class="nav-link" href="hs3.html">OTA YHTEYTTÄ</a>
