--- a/hs2.html
+++ b/hs2.html
@@ -28,7 +28,19 @@
 <h1>Hyvinvoiva sinä</h1>
 </div>
  
-
+<div id="nav">	
+  <ul class="nav">
+	<li>
+	<a class="nav-link active" href="hsindex.html">ETUSIVU</a>
+	</li>
+	<li>
+	<a class="nav-link" href="hs2.html">BRAIN RELIEF</a>
+	</li>
+	<li>
+	<a class="nav-link" href="hs3.html">OTA YHTEYTTÄ</a>
+	</li>
+   </ul> 
+</div>
  
 
 	
