--- a/hs3.html
+++ b/hs3.html
@@ -31,13 +31,13 @@
 <div id="nav">	
   <ul class="nav">
 	<li>
-	<a class="nav-link active" href="hsindex.html">ETUSIVU</a>
+	<a href="hsindex.html">ETUSIVU</a>
 	</li>
 	<li>
-	<a class="nav-link" href="hs2.html">BRAIN RELIEF</a>
+	<a href="hs2.html">BRAIN RELIEF</a>
 	</li>
 	<li>
-	<a class="nav-link" href="hs3.html">OTA YHTEYTTÄ</a>
+	<a href="hs3.html">OTA YHTEYTTÄ</a>
 	</li>
    </ul> 
 </div>
