--- a/hs2.html
+++ b/hs2.html
@@ -48,7 +48,7 @@
 	
 <div class="container">
   <div class="row">
-	<div class="col">
+	<div class="col-lg-12">
 	<p><span class="placeholder-img large right"></span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 		Etiam ullamcorper pretium sapien scelerisque fringilla. Curabitur quis sem eu massa semper molestie sit amet nec neque. Fusce rutrum, 
 		nibh tempus elementum laoreet, lacus libero venenatis lorem, a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor.		
