--- a/hs2.html
+++ b/hs2.html
@@ -44,7 +44,9 @@
    </ul> 
 </div>
  
-
+	<h2>Brain Relief</h2>
+	
+	<p>Stressiä? Univaikeuksia? Rentoutushoitoa ajatusten selkeyttämiseksi.</p>
 	
 <div class="container">
   <div class="row">
