--- a/hs2.html
+++ b/hs2.html
@@ -43,10 +43,15 @@
 	</li>
    </ul> 
 </div>
- 
-	<h2>Brain Relief</h2>
 	
+ <div class="container">
+  <div class="row">
+	<div class="col-lg-12">
+	<h2>Brain Relief</h2>
 	<p>Stressiä? Univaikeuksia? Rentoutushoitoa ajatusten selkeyttämiseksi.</p>
+	</div>
+  </div>
+</div>
 	
 <div class="container">
   <div class="row">
