--- a/hs2.html
+++ b/hs2.html
@@ -46,7 +46,7 @@
 	
  <div class="container">
   <div class="row">
-	<div class="col-lg-12">
+	<div class="col-sm-4">
 	<h2>Brain Relief</h2>
 	<p>Stressiä? Univaikeuksia? Rentoutushoitoa ajatusten selkeyttämiseksi.</p>
 	</div>
