--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
  </aside> 
  
  
-<div id="section">
- <section>
+ <section class="koirat>
   <h2 class="H2">Parhaimmat koirat</h2>
-<ol type="A" class="listat">
+<ol type="A">
   <li> Alma
   <li> Tyty
 </ol> 
  </section>
- </div>
+
  
  
 <div id="section2">
