--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  
  
  <section class="koirat>
-  <h2 class="H2">Parhaimmat koirat</h2>
+  <h2>Parhaimmat koirat</h2>
 <ol type="A">
   <li> Alma
   <li> Tyty
