--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
  <title>Annan kotisivu</title>
 <link rel="stylesheet" href="styles.css">
 
- 
 </head>
 <body>
 
-<div id="header">
- <header>
+ <header class="header">
   <h1>Nettisivut kehitteillä!</h1>
  </header>
- </div>
+
 
  <div id="nav">
  <nav>
