--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
 </ol> 
  </section>
 
- 
- 
-<div id="section2">
- <section>
-  <h2 class="H2">Muista ostaa kaupasta</h2> 
+
+ <section class="kauppalista">
+  <h2>Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;" class="listat">
   <li>Maitoa
   <li>Kahvia
 </ul>
  </section>
-  </div>
+
  
  
   
