--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
  <section class="kauppalista">
   <h2>Muista ostaa kaupasta</h2> 
-<ul style="list-style-type:square;" class="listat">
+<ul style="list-style-type:square;">
   <li>Maitoa
   <li>Kahvia
 </ul>
@@ -53,17 +53,10 @@
 
  
  
-  
- 
-<div id="footer">
-<footer>
+<footer class="footer">
  <p> © Anna Pääkkönen </p>
  </footer>
- </div>
 
-
-
-  
     
   
 </body>
