--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
  </nav>
 
 
- <article>
+ <article class="h2">
   <h2>Tervetuloa tutustumaan sivuihini</h2>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
    Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
  </article>
 
- <aside>
- <div class="myDiv">
+ <aside class="myDiv">
  <p> HEI! </p>
-</div>
  </aside> 
  
  
