--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 </head>
 <body>
 
- <header class="header">
-  Nettisivut kehitteillä!
- </header>
+ <header class="header">Nettisivut kehitteillä!</header>
 
 
  <nav>
