--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
- <header class="header">Nettisivut kehitteillä!</header>
+ <header class="header">
+  <h1>Nettisivut kehitteillä!</h1>
+ </header>
 
 
  <nav>
