--- a/third.html
+++ b/third.html
@@ -8,12 +8,7 @@
   box-sizing: border-box;
 }
  
- header {
-  padding: 30px;
-  font-size:20px;
-  text-align:center;
-  background-color: black;
-  }
+
   
  nav {
   float: left;
@@ -44,19 +39,7 @@
   margin:1px;
   }
   
- footer {
-  text-align:center;
-  font-size:10px;
-  clear:both;
-  font-family: verdana;
-  color: black;
-  background-color: white;
-  border-radius: 15px;
-  border-style: solid;
-  padding: 1px;
-  margin:5px;
-  position: relative;
-}
+ 
   
 
   
@@ -66,7 +49,7 @@
 <body>
 
 
- <header>
+ <header class="header">
   <h1>Kolmannen sivun jännittävä sisältö</h1>
  </header>
  
@@ -96,7 +79,7 @@
  
   
  
-<footer>
+<footer class="footer">
  <p> © Anna Pääkkönen </p>
  </footer>
 
