--- a/second.html
+++ b/second.html
@@ -72,7 +72,7 @@
     Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä.
     Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä.</p>
     
-    <img src="https://cdn.pixabay.com/photo/2015/07/09/19/32/dog-838281_1280.jpg" alt="Koira nenä kiinni kamerassa" width="1000">
+    <img src="IMG_5523.jpg" alt="Kuva taulusta, jossa paljon kukkia pellolla" width="1000">
    
     
   </body>
