--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </header>
 
 
- <nav class="nav">
+ <nav>
    <a href="index.html">Aloitussivu</a>
    <a href="second.html">Toinen sivu</a>
    <a href="third.html">Kolmas sivu</a>
