--- a/second.html
+++ b/second.html
@@ -44,7 +44,7 @@
     Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä.
     Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä.</p>
     
-    <img src="IMG_5523.jpg" alt="Kuva taulusta, jossa paljon kukkia pellolla" width="500">
+    <img src="IMG_5523.jpg" alt="Kuva taulusta, jossa paljon kukkia pellolla" width="500" class="keskitettykuva">
    
     
   </body>
