--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
  </nav>
 
 
- <article class="h2">
+ <article id="h2">
   <h2>Tervetuloa tutustumaan sivuihini</h2>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
    Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. </p>
  </article>
 
- <aside class="myDiv">
+ <aside id="myDiv">
  <p> HEI! :)</p>
  </aside> 
  
  
- <section class="koirat">
+ <section id="koirat">
   <h2>Parhaimmat koirat</h2>
 <ol type="A">
   <li> Alma
@@ -40,7 +40,7 @@
  </section>
 
 
- <section class="kauppalista">
+ <section id="kauppalista">
   <h2>Muista ostaa kaupasta</h2> 
 <ul style="list-style-type:square;">
   <li>Maitoa
@@ -50,7 +50,7 @@
 
  
  
-<footer class="footer">
+<footer id="footer">
  <p> © Anna Pääkkönen </p>
  </footer>
 
