--- a/second.html
+++ b/second.html
@@ -12,13 +12,12 @@
    <h1>Nettisivut kehitteillä!</h1>
   </header>
     
- <div id="nav">
- <nav>
+ <nav id="nav">
    <a href="index.html">Aloitussivu</a>
    <a href="second.html">Toinen sivu</a>
    <a href="third.html">Kolmas sivu</a>
  </nav>
- </div>
+ 
     
     <p>Tänne sivulle kerään tietoja kaikesta mahdollisesta asiasta. Täältä löydät siis asioita, joita et uskonut tarvitsevasi tietää, mutta
       nyt kohta tiedät. Tai sitten et. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. Tässä tulee tekstiä, tässä tulee tekstiä. 
