--- a/third.html
+++ b/third.html
@@ -4,10 +4,6 @@
  <title> Annan kotisivu 3 </title>
  <link rel="stylesheet" href="styles.css">
  <style>
- * {
-  box-sizing: border-box;
-}
- 
 
   
  nav {
@@ -54,7 +50,7 @@
  </header>
  
  
- <nav>
+ <nav id="nav">
   <ul>
    <li><a href="index.html">Aloitussivu</a></li>
    <li><a href="second.html">Toinen sivu</a></li>
