--- a/third.html
+++ b/third.html
@@ -3,43 +3,7 @@
 <head> 
  <title> Annan kotisivu 3 </title>
  <link rel="stylesheet" href="styles.css">
- <style>
 
-  
- nav {
-  float: left;
-  width: 18%;
-  background-color: snow;
-  padding: 10px;
-  border: solid;
-  margin: 1px;
-  text-align:center;
-  height: 200px;
-  }
-  
- nav ul {
-  list-style-type: none;
-  padding: 0;
-  }
-  
- a:hover {
-  color:red;
-  }
-  
- section {
-  float: left;
-  width: 79%;
-  background-color: white;
-  padding: 10px;
-  border: solid;
-  margin:1px;
-  }
-  
- 
-  
-
-  
-  </style>
  
 </head>
 <body>
@@ -61,7 +25,7 @@
  </nav>
  
 
-<section>
+<section id="section">
   <h2>Kolmannella sivulla mietitään uusia jänniä juttuja</h2>
   <p>Tässä on vähän tekstiä uuden nettisivuni kappaleeseen. Nyt kaikki sankoin joukoin tutkimaan tätä uutta ja ihmeellistä nettisivua.</p>
   <p>Tässä on toinen kappale, jossa on myös paljon tekstiä luettavaksi kaikille. Katsotaan toimiiko. Tässä on tekstiä. Tässä on tekstiä. Tässä on tekstiä. 
@@ -75,7 +39,7 @@
  
   
  
-<footer class="footer">
+<footer id="footer">
  <p> © Anna Pääkkönen </p>
  </footer>
 
