--- a/third.html
+++ b/third.html
@@ -14,7 +14,7 @@
  </header>
  
  
- <nav class="nav">
+ <nav id="nav">
   <ul>
    <li><a href="index.html">Aloitussivu</a></li>
    <li><a href="second.html">Toinen sivu</a></li>
