--- a/second.html
+++ b/second.html
@@ -12,7 +12,7 @@
    <h1>Nettisivut kehitteillä!</h1>
   </header>
     
- <nav id="nav">
+ <nav>
    <a href="index.html">Aloitussivu</a>
    <a href="second.html">Toinen sivu</a>
    <a href="third.html">Kolmas sivu</a>
