--- a/hsindex.html
+++ b/hsindex.html
@@ -12,12 +12,7 @@
     <title>Hyvinvoiva sinä</title>
 	  
 <style>
-figure {
-        border: none;
-        padding: 5px;
-        margin: 10px;
-        text-align:center;
-      }
+
 
 #container {
 	padding: 10px;
@@ -30,11 +25,11 @@ figure {
   
 <body>
 	
-<div id="header">
+<header id="header">
 <h1>Hyvinvoiva sinä</h1>
-</div>
+</header>
  
-<div id="nav">	
+<nav id="nav">	
   <ul class="nav">
 	<li>
 	<a href="hsindex.html">ETUSIVU</a>
@@ -46,7 +41,7 @@ figure {
 	<a href="hs3.html">OTA YHTEYTTÄ</a>
 	</li>
    </ul> 
-</div>
+</nav>
  
 <figure>
       <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="300">
@@ -65,7 +60,7 @@ figure {
 	  
 
 
-<footer>
+<footer id="footer">
 	<p>Copyright © Anna Pääkkönen</p>
 </footer>
   
