--- a/hsindex.html
+++ b/hsindex.html
@@ -9,18 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="hs.css">
     
-    <title>Hyvinvoiva sinä</title>
-	  
-<style>
-
-
-#container {
-	padding: 10px;
-	margin: 10px;
-	}
-	
-</style>  
-	  
+    <title>Hyvinvoiva sinä</title> 
   </head>
   
 <body>
@@ -43,7 +32,7 @@
    </ul> 
 </nav>
  
-<figure>
+<figure id="figure">
       <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="300">
 </figure>	
 	
