--- a/hsindex.html
+++ b/hsindex.html
@@ -32,7 +32,7 @@
    </ul> 
 </nav>
  
-<figure id="figure">
+<figure class="keskitettykuva">
       <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="300">
 </figure>	
 	
