--- a/hs2.html
+++ b/hs2.html
@@ -10,18 +10,7 @@
     <link rel="stylesheet" href="hs.css">
     
     <title>Hyvinvoiva sinä</title>
-	  
-<style>
-	figure {
-        border: none;
-        padding: 4px;
-        margin: 4px;
-        text-align:center;
-      }
-	
-	
-</style>  
-	  
+	  	  
   </head>
   
 <body>
@@ -74,7 +63,7 @@
 	  
 
 
-<footer>
+<footer id="footer">
 	<p>Copyright © Anna Pääkkönen</p>
 </footer>
   
