--- a/hsindex.html
+++ b/hsindex.html
@@ -32,8 +32,8 @@
    </ul> 
 </nav>
  
-<figure class="keskitettykuva">
-      <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="400">
+<figure>
+      <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="400" class="keskitettykuva">
 </figure>	
 	
 <div class="container">
