--- a/hsindex.html
+++ b/hsindex.html
@@ -33,7 +33,7 @@
 </nav>
  
 <figure>
-      <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" width="400" class="keskitettykuva">
+      <img src="http://www.hyvinvoivasina.fi/attachments/Image/IMG_8835.jpg" alt="Hyvinvoiva sinä hoitohuone" class="keskitettykuva">
 </figure>	
 	
 <div class="container">
