--- a/hs2.html
+++ b/hs2.html
@@ -15,9 +15,9 @@
   
 <body>
 	
-<div id="header">
+<header id="header">
 <h1>Hyvinvoiva sinä</h1>
-</div>
+</header>
  
 <div id="nav">	
   <ul class="nav">
