--- a/hs2.html
+++ b/hs2.html
@@ -19,7 +19,7 @@
 <h1>Hyvinvoiva sinä</h1>
 </header>
  
-<div id="nav">	
+<nav id="nav">	
   <ul class="nav">
 	<li>
 	<a href="hsindex.html">ETUSIVU</a>
@@ -31,7 +31,7 @@
 	<a href="hs3.html">OTA YHTEYTTÄ</a>
 	</li>
    </ul> 
-</div>
+</nav>
 	
 
 	
