--- a/hs2.html
+++ b/hs2.html
@@ -40,22 +40,15 @@
 	<div class="col-lg-12">
 	<h2>Brain Relief</h2>
 	<p>Stressiä? Univaikeuksia? Rentoutushoitoa ajatusten selkeyttämiseksi.</p>
-	<p><span class="placeholder-img large right"></span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+	<p><img src="IMG_5522.JPG" alt="Kuva" class="kuvaoikealla">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 		Etiam ullamcorper pretium sapien scelerisque fringilla. Curabitur quis sem eu massa semper molestie sit amet nec neque. Fusce rutrum, 
 		nibh tempus elementum laoreet, lacus libero venenatis lorem, a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor.		
 	</p>
-	<p><span class="placeholder-img large left"></span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+	<p><img src="IMG_5522.JPG" alt="Kuva" class="kuvavasemmalla">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 		Etiam ullamcorper pretium sapien scelerisque fringilla. Curabitur quis sem eu massa semper molestie sit amet nec neque. Fusce rutrum, 
 		nibh tempus elementum laoreet, lacus libero venenatis lorem, a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor.
 	</p>
-	<p><span class="placeholder-img large right"></span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-		Etiam ullamcorper pretium sapien scelerisque fringilla. Curabitur quis sem eu massa semper molestie sit amet nec neque. Fusce rutrum, 
-		nibh tempus elementum laoreet, lacus libero venenatis lorem, a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor.
-	</p>
-	<p><span class="placeholder-img large left"></span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-		Etiam ullamcorper pretium sapien scelerisque fringilla. Curabitur quis sem eu massa semper molestie sit amet nec neque. Fusce rutrum, 
-		nibh tempus elementum laoreet, lacus libero venenatis lorem, a vestibulum tellus mauris in neque. Aliquam rutrum vitae nisi non auctor.
-	</p>
+	
 	</div>
   </div>
 </div>
