--- a/hs3.html
+++ b/hs3.html
@@ -11,24 +11,16 @@
     
     <title>Hyvinvoiva sinä</title>
 	  
-<style>
-	figure {
-        border: none;
-        padding: 4px;
-        margin: 4px;
-        text-align:center;
-      }
-</style>  
 	  
   </head>
   
 <body>
 	
-<div id="header">
+<header id="header">
 <h1>Hyvinvoiva sinä</h1>
-</div>
+</header>
  
-<div id="nav">	
+<nav id="nav">	
   <ul class="nav">
 	<li>
 	<a href="hsindex.html">ETUSIVU</a>
@@ -40,8 +32,10 @@
 	<a href="hs3.html">OTA YHTEYTTÄ</a>
 	</li>
    </ul> 
-</div>
+</nav>
  
+
+	
 	
 
 	  
