--- a/hs3.html
+++ b/hs3.html
@@ -34,7 +34,20 @@
    </ul> 
 </nav>
  
-
+<div class="container">
+  <h2>Ota yhteyttä</h2>
+  <p>Tähän jotain tekstiä, jos haluaa</p>
+  <form>
+    <div class="form-group">
+      <label>Nimi:</label>
+      <input type="text" class="form-control">
+    </div>
+    <div class="form-group">
+      <label">Sähköposti:</label>
+      <input type="text" class="form-control">
+    </div>
+  </form>
+</div>
 	
 	
 
