--- a/hs3.html
+++ b/hs3.html
@@ -49,7 +49,10 @@
   </form>
 </div>
 	
-	
+ <div class="form-group">
+  <label for="comment">Comment:</label>
+  <textarea class="form-control" rows="5" id="comment"></textarea>
+</div> 	
 
 	  
 	  
