--- a/hs3.html
+++ b/hs3.html
@@ -35,25 +35,32 @@
 </nav>
  
 <div class="container">
-  <h2>Ota yhteyttä</h2>
-  <p>Tähän jotain tekstiä, jos haluaa</p>
-  <form>
-    <div class="form-group">
-      <label>Nimi:</label>
-      <input type="text" class="form-control">
-    </div>
-    <div class="form-group">
-      <label">Sähköposti:</label>
-      <input type="text" class="form-control">
-    </div>
-  </form>
+  <div class="row">
+	<div class="col-lg-12">
+  	<h2>Ota yhteyttä</h2>
+  	<p>Tähän jotain tekstiä, jos haluaa</p>
+  	<form>
+   	 <div class="form-group">
+      	<label>Nimi:</label>
+      	<input type="text" class="form-control">
+    	</div>
+   	 <div class="form-group">
+     	 <label">Sähköposti:</label>
+      	<input type="text" class="form-control">
+    	</div>
+  	</form>
+	</div>
+  </div>
 </div>
 	
+<div class="container">
+  <div class="row">					       
  <div class="form-group">
   <label for="comment">Comment:</label>
   <textarea class="form-control" rows="5" id="comment"></textarea>
 </div> 	
-
+  </div>
+</div>
 	  
 	  
 
