--- a/hs3.html
+++ b/hs3.html
@@ -54,13 +54,15 @@
 </div>
 	
 <div class="container">
-  <div class="row">					       
+  <div class="row">	
+<div class="col-lg-12">
  <div class="form-group">
   <label for="comment">Comment:</label>
   <textarea class="form-control" rows="5" id="comment"></textarea>
 </div> 	
   </div>
 </div>
+  </div>						      
 	  
 	  
 
