--- a/hs3.html
+++ b/hs3.html
@@ -36,7 +36,7 @@
  
 <div class="container">
   <div class="row">
-	<div class="col-lg-12">
+	<div class="col-sm-4">
   	<h2>Ota yhteyttä</h2>
   	<p>Tähän jotain tekstiä, jos haluaa</p>
   	<form>
@@ -55,7 +55,7 @@
 	
 <div class="container">
   <div class="row">	
-<div class="col-lg-12">
+<div class="col-sm-4">
  <div class="form-group">
   <label for="comment">Comment:</label>
   <textarea class="form-control" rows="5" id="comment"></textarea>
