--- a/hs3.html
+++ b/hs3.html
@@ -64,7 +64,14 @@
 </div>
   </div>						      
 	  
-	  
+<div class="container">
+	<div class="row">	
+	<div class="col-sm-4">
+  <h2>Toimimaton Nappi</h2>
+  <button type="button" class="btn btn-primary btn-lg">Large</button>	 
+</div>
+ </div>
+    </div>
 
 
 <footer id="footer">
