--- a/hs3.html
+++ b/hs3.html
@@ -67,8 +67,7 @@
 <div class="container">
 	<div class="row">	
 	<div class="col-sm-4">
-  <h2>Toimimaton Nappi</h2>
-  <button type="button" class="btn btn-primary btn-lg">Large</button>	 
+  <button type="button" class="btn btn-primary btn-sm">Toimimaton nappi :)</button>	 
 </div>
  </div>
     </div>
