--- a/hs3.html
+++ b/hs3.html
@@ -39,6 +39,7 @@
 	<div class="col-sm-4">
   	<h2>Ota yhteyttä</h2>
   	<p>Tähän jotain tekstiä, jos haluaa</p>
+	<img src="yhteystiedot.JPG" alt="Kuva" class="yhteystiedot">
   	<form>
    	 <div class="form-group">
       	<label>Nimi:</label>
